Fix spacing on history view

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -381,7 +381,7 @@ body {
 
     .date {
       display: inline-block;
-      width: 75px;
+      width: 85px;
     }
 
     .path:hover {
